part1/exer1.07/manifests/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: exer-1-07-log-output
spec:
  replicas: 1
  selector:
    matchLabels:
      app: exer-1-07-log-output
  template:
    metadata:
      labels:
        app: exer-1-07-log-output
    spec:
      containers:
        - name: exer-1-07-log-output
          image: numbers00/exer1.07-log-output
