part1/exer1.07/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: exer-1-07-log-output-svc
spec:
  type: ClusterIP
  selector:
    app: exer-1-07-log-output
  ports:
    - port: 2346
      protocol: TCP
      targetPort: 8080
